# secr_dispatch

./: CMakeLists.txt  README.md  exception.proto  http.proto  secr_dispatch_http.proto  secr_dispatch_test.proto  testing.proto  util.cmake
include/: CMakeLists.txt
include/secr/: CMakeLists.txt
include/secr/dispatch/: CMakeLists.txt  buffered_stream.hpp  config.hpp  fake_stream.hpp  ownership.hpp  polymorphic_stream.hpp  stream.hpp  string_view.hpp
include/secr/dispatch/api/: CMakeLists.txt  exception.hpp  json.hpp  shared_ptr.hpp
include/secr/dispatch/asioex/: CMakeLists.txt  errors.hpp  transfer.hpp
include/secr/dispatch/http/: CMakeLists.txt  dispatch_promise.hpp  dispatcher.hpp  errors.hpp  exception.hpp  execution_context.hpp  execution_promise.hpp  identifiers.hpp  parse.hpp  read_stream.hpp  request_header.hpp  responder.hpp  server_connection.hpp  server_request.hpp  write_stream.hpp
src/: CMakeLists.txt  fake_stream.cpp
src/api/: CMakeLists.txt  exception.cpp  json.cpp
src/http/: CMakeLists.txt  dispatcher.cpp  errors.cpp  read_stream.cpp  request_header.cpp  server_connection.cpp  server_request.cpp
tests/: CMakeLists.txt  asio_tests.cpp  fake_stream_tests.cpp  http_parse_tests.cpp  json_over_http_tests.cpp  test_utils.cpp  test_utils.hpp
